# hecate

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  .lycheeignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.release  Justfile  Makefile  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum
.claude/: settings.json
.claude/commands/: race.md  test-affected.md
.claude/skills/: architect  backend  devops  maintenance  providers  tauri  tester  ui
.cursor/rules/: 00-core.mdc  10-planning.mdc  20-testing.mdc  30-review.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: agent-docs.instructions.md  backend.instructions.md  providers.instructions.md  tauri.instructions.md  ui.instructions.md
.github/workflows/: _tauri-mobile-shared.yml  _tauri-shared.yml  acp-release-smoke.yml  codeql.yml  cursor-agent-update.yml  links.yml  maintenance.yml  release-delivery.yml  release.yml  tauri-build.yml  tauri-mobile-build.yml  test.yml  website.yml
ai/: README.md
ai/core/: engineering-standards.md  project-context.md  verification.md  workflow.md
ai/tasks/: code-review.md  debugging.md  implementation.md  planning.md  refactoring.md  release.md
cmd/gateway/: main.go  mcp.go
cmd/hecate/: acp.go  acp_test.go  banner_test.go  cli.go  cli_test.go  exposure_warnings.go  exposure_warnings_test.go  main.go  main_test.go  mcp.go  postgres_smoke_test.go  runtime_state.go  runtime_state_test.go
cmd/hecate-acp/: main.go  main_test.go
cmd/sandboxd/: README.md
docs/: README.md  acp.md  agent-runtime.md  architecture.md  artifact-storage-v1.md  beta-roadmap.md  chat-sessions.md  deployment.md  desktop-app.md  desktop-updater-signing.md  development.md  event-protocol-v1.md  events.md  external-agent-adapters.md  known-limitations.md  local-models.md  macos-signing.md  mcp.md  providers.md  release.md  runtime-api.md  sandbox.md  security.md  semantic-cache.md  telemetry.md  tenants.md
docs-ai/: README.md
docs-ai/core/: agent-guidance.md  engineering-standards.md  project-context.md  verification.md  workflow.md
docs-ai/skills/: README.md
docs-ai/tasks/: code-review.md  debugging.md  implementation.md  maintenance.md  planning.md  refactoring.md  release.md
docs/contributor/: architecture.md  beta-roadmap.md  development.md  release.md
docs/design/: README.md
docs/operator/: deployment.md  desktop-app.md  desktop-updater-signing.md  known-limitations.md  macos-signing.md  mobile-app.md  projects.md  providers.md  security.md
docs/rfcs/: AUDIT-2026-05-17.md  README.md  acp-editor-owned-workspace.md  agent-memory.md  artifact-storage-v1.md  autoresearch.md  chat-runtime-ux-consistency.md  cli-structure.md  context-assembly-and-injection-boundaries.md  embeddings.md  endpoint-versioning-and-settings-paths.md  event-protocol-experimental.md  event-protocol-extensions.md  event-protocol-v1.md  external-adapter-approvals-v1.md  external-agent-adapters.md  external-agent-approval-loop-v1.md  hecate-chat-model-capabilities.md  import-external-chat-history.md  llm-context-window-management.md  local-models-llamacpp.md  migration-cli.md  projects.md  (+5 more)
e2e/: acp-smoke.ts  agent_loop_tool_dispatch_test.go  approval_reconcile_test.go  cairnline_migration_test.go  chat_attachment_api_test.go  chat_session_lifecycle_test.go  docker_test.go  gateway_test.go  ollama_test.go  operator_terminal_test.go  otel_collector_test.go  otlp_sink_test.go  project_activity_test.go  project_assignment_launch_test.go  project_assistant_test.go  sandbox_test.go  shutdown_smoke_test.go  task_approval_lifecycle_test.go  task_run_lifecycle_test.go
examples/: mcp-weather-app-server.mjs
just/: _helpers.just  docs.just  go.just  maintenance.just  recipes_test.go  release.just  smoke.just  tauri.just  ui.just  website.just
scripts/: capture-screenshots.ts  check-agent-docs.ts  check-mermaid.ts  check-release-workflows.ts  fetch-llama-server.ts  mobile-version.ts  nightly-maintenance.ts  release.sh  release.ts  resolve-tauri-version.ts  stamp-version.ts  tauri-smoke.ts  update-release-links.ts
tauri/: package.json
tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
tauri/src-tauri/capabilities/: default.json  mobile.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/permissions/: workspace_open.toml
tauri/src-tauri/permissions/autogenerated/: cloud_connection_sign_out.toml  cloud_connection_start.toml  cloud_connection_status.toml  cloud_connection_stop.toml  mobile_connections.toml  mobile_disable_notifications.toml  mobile_enable_notifications.toml  mobile_notification_status.toml  mobile_open_connection.toml  mobile_open_notification_settings.toml  mobile_reopen_authorization.toml  mobile_sign_in.toml  mobile_sign_out.toml  mobile_start_connection.toml  mobile_status.toml  set_update_badge.toml  take_pending_desktop_update_check.toml
tauri/src-tauri/src/: cloud_connection.rs  lib.rs  main.rs  mobile.rs  sidecar.rs  webview_media.rs
tauri/src-tauri/src/desktop/: cloud_connection.rs  mod.rs  sidecar.rs
ui/: AGENTS.md  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
website/: .gitignore  README.md  astro.config.mjs  package.json
(+1390 files in other folders)
