[package]
name = "hecate-app"
version = "0.1.0-alpha.32"
description = "Hecate — AI gateway and agent-task runtime"
authors = ["Hecate contributors"]
license = "Apache-2.0"
repository = "https://github.com/hecatehq/hecate"
homepage = "https://hecate.sh"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hecate_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
log = "0.4"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
